# telephone.operator

./: .cursorrules  .env.example  .gitignore  README.md  appium_manager.py  argon.py  inspector.py  livestream.py  llms.txt  main.py  pyproject.toml  requirements.txt  server.py  setup.sh  start_appium.sh  test_api.sh  test_server.py  ui.py
frontend/: next.config.ts  package-lock.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/app/[name]/: page.tsx
frontend/app/components/: AppCard.tsx  Header.tsx  ScreenshotGallery.tsx
frontend/app/utils/: getArtifacts.ts
src/: config.py  manager.py
src/agents/: coverage_agent.py  planner_agent.py  screenshot_agent.py
src/appium/: action_trace.py  context.py  driver.py  enums.py  tools.py
src/ui/: chat.py  console.py  printer.py
tests/: README.md  conftest.py  pytest.ini  test_appium_tools.py
