[project]
name = "telephone-operator"
version = "0.1.0"
description = "Telephone operator project"
requires-python = ">=3.12"
dependencies = [
    "appium-python-client>=5.0.0",
    "lxml>=5.3.1",
    "mcp>=1.6.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.6.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "selenium>=4.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telephone_operator"] 
